--- a/scale_for_good/pubspec.yaml
+++ b/scale_for_good/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: "0.5.6"
+  flutter_ble_lib: "2.2.1"
+  rxdart: ^0.22.0
+  fimber: ^0.1.10
+  permission_handler: ^4.2.0+hotfix.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
